Fix positioning of emailWrap and iconWrapper elements for improved layout consistency

--- a/src/rootComponents/CustomSectionOneBackground/style.css
+++ b/src/rootComponents/CustomSectionOneBackground/style.css
@@ -30,9 +30,10 @@
 
 .emailWrap {
   background-color: #f8c70c;
-  position: absolute;
+  position: fixed;
   top: 76vh;
-  left: -98px;
+  left: 200px;
+  /* left: -98px; */
   width: fit-content;
   padding: 6px 6px 10px 6px;
   line-height: 1;
