--- a/src/rootComponents/Header/style.css
+++ b/src/rootComponents/Header/style.css
@@ -11,8 +11,9 @@
   transform: translateY(0);
   will-change: transform;
   backface-visibility: hidden;
-  position: absolute;
-  top: 0;
+  position: fixed;
+  top: 20vh;
+  /* top: 0; */
   left: 0;
   margin: 12px 32px;
   transition: transform 0.4s ease-out;
